--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/css/styles.min.css">
+    <link rel="stylesheet" href="./css/styles.min.css">
     <title>WebStore - Loja especializada</title>
 </head>
 
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="./dist/images/header-logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="./images/header-logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo">
-                        <img src="./dist/images/header-logo.png" alt="">
+                        <img src="./images/header-logo.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -253,7 +253,7 @@
     </div>
 
     <!-- Scripts Unidos e Minificados -->
-    <script src="./dist/js/scripts.min.js"></script>
+    <script src="./js/scripts.min.js"></script>
    
 </body>
 
