--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="col-md-12">                   
                     <div class="social-icons">
                         <ul>
-                            <li><a href="https://facebook.com/antoniocmoura"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="https://facebook.com/antoniocdmoura"><i class="fa-brands fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/antoniocmoura"><i class="fa-brands fa-twitter"></i></a></li>
                             <li><a href="https://linkedin.com/in/antoniocmoura/"><i class="fa-brands fa-linkedin"></i></a></li>
                         </ul>
